# oc

./: .gitignore  .ocamlformat  .ocamlinit  .stignore  Makefile  README.md  apt.txt  dune  dune-project  hello.ml  hello.opam  oc.opam  reqs.opam
_duned/lib/: dune  hello.mlx
_duned/lib/meta/: dune  meta.ml  readme.ml
_duned/lib/parser/: parser.ml
_duned/test/: dune
doc/: Modern_Compiler_Implementation_in_ML.djvu
duned/: dune-project
etc/: fstab
lib/: dune  hello.ml  hello.mlx  ini.ini  meta.ml  oc.ml  readme.ml
lib/ast/: ast.ml  dune
lib/meta/: dune
lib/parser/: dune  parser.ml
meta/: Makefile  README.md  apt.txt
meta/inc/: main.hpp
meta/src/: main.cpp
oc/lib/: dune
src/: dune
