(lang dune 3.11)
(name hello)
(generate_opam_files)
(authors     "Dmitry Ponyatov <dponyatov@gmail.com>")
(maintainers "Dmitry Ponyatov <dponyatov@gmail.com>")
(homepage    "https://github.com/ponyatov/oc/tree/hello")
(bug_reports "dponyatov@gmail.com")
(package
 (name hello)
 (synopsis "OCaml workout")
 ; (description "")
 ; (depends )
)
