(lang dune 3.11)
(generate_opam_files)
(authors     "Dmitry Ponyatov <dponyatov@gmail.com>")
(maintainers "Dmitry Ponyatov <dponyatov@gmail.com>")
(homepage    "https://github.com/ponyatov/oc/tree/hello")
(bug_reports "dponyatov@gmail.com")
(package
 (name hello)
 (synopsis "OCaml workout")
 (description "https://cs3110.github.io/textbook/cover.html")
 (depends ocamlformat)
)
