(lang dune 3.11)
(generate_opam_files)
(bug_reports "http://t.me/dponyatov")
(authors     "Dmitry Ponyatov <dponyatov@gmail.com>")
(maintainers "Dmitry Ponyatov <dponyatov@gmail.com>")
(homepage    "https://github.com/ponyatov/oc/tree/hello")
(license      MIT)
(package
 (name         hello)
 (synopsis    "OCaml workout")
 (description "https://cs3110.github.io/textbook/cover.html")
 (depends      utop ocamlformat ocaml-lsp-server)
)
